--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
             <% if user_signed_in? %>
               <a href="<%= admin_dashboard_path %>" class="bg-brand-orange hover:bg-opacity-90 text-white font-semibold py-2 px-4 rounded-full transition duration-300 shadow-md hover:shadow-lg">Admin</a>
             <% else %>
-              <a href="<%= contact_path %>" class="bg-brand-orange hover:bg-opacity-90 text-white font-semibold py-2 px-4 rounded-full transition duration-300 shadow-md hover:shadow-lg">Contact Us</a>
+              <a href="<%= apply_path %>" class="bg-brand-orange hover:bg-opacity-90 text-white font-semibold py-2 px-4 rounded-full transition duration-300 shadow-md hover:shadow-lg">Become a Guest</a>
             <% end %>
         </div>
     </header>
