updated the cover image

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
                 <!-- Image (Right Side) -->
                 <div class="w-full lg:w-1/2 relative pt-8 lg:pt-16">
                     <div class="rounded-2xl overflow-hidden shadow-2xl">
-                        <img src="/images/podcast_james.png" alt="James Kennedy - The Gross Profit Podcast Host" class="w-full h-auto">
+                        <img src="/images/podcast_guests.png" alt="James Kennedy - The Gross Profit Podcast Host" class="w-full h-auto">
                     </div>
                 </div>
             </div>
